--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "caporal": "^1.1.0",
     "chalk": "^2.4.2",
+    "change-case": "^3.1.0",
     "ejs": "^2.6.1",
     "ora": "^3.0.0"
   }
