--- a/package.json
+++ b/package.json
@@ -26,10 +26,14 @@
   },
   "homepage": "https://github.com/nxcd/next#readme",
   "files": [
-    "dist/**/*"
+    "dist/**/*",
+    "templates/**/*"
   ],
   "devDependencies": {
+    "@types/ejs": "^2.6.1",
+    "@types/execa": "^0.9.0",
     "@types/node": "^10.12.21",
+    "@types/ora": "^3.0.0",
     "standard": "^12.0.1",
     "tslint": "^5.12.1",
     "typescript": "^3.3.1"
@@ -39,6 +43,8 @@
     "chalk": "^2.4.2",
     "change-case": "^3.1.0",
     "ejs": "^2.6.1",
+    "enquirer": "^2.3.0",
+    "execa": "^1.0.0",
     "ora": "^3.0.0"
   }
 }
