--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@types/ejs": "^2.6.1",
     "@types/execa": "^0.9.0",
+    "@types/glob": "^7.1.1",
     "@types/node": "^10.12.21",
     "@types/ora": "^3.0.0",
     "standard": "^12.0.1",
@@ -45,6 +46,7 @@
     "ejs": "^2.6.1",
     "enquirer": "^2.3.0",
     "execa": "^1.0.0",
+    "glob": "^7.1.3",
     "ora": "^3.0.0"
   }
 }
