--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/glob": "^7.1.1",
     "@types/node": "^10.12.21",
     "@types/ora": "^3.0.0",
+    "@types/pluralize": "^0.0.29",
     "standard": "^12.0.1",
     "tslint": "^5.12.1",
     "typescript": "^3.3.1"
@@ -47,6 +48,7 @@
     "enquirer": "^2.3.0",
     "execa": "^1.0.0",
     "glob": "^7.1.3",
-    "ora": "^3.0.0"
+    "ora": "^3.0.0",
+    "pluralize": "^7.0.0"
   }
 }
