--- a/package.json
+++ b/package.json
@@ -1,9 +1,17 @@
 {
   "name": "@nxcd/next",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "File template and cli helper for files using NXCD architecture",
   "main": "dist/index.js",
-  "keywords": ["cli", "architecture", "boilerplate", "nxcd", "nextcode", "mvc", "event sourcing"],
+  "keywords": [
+    "cli",
+    "architecture",
+    "boilerplate",
+    "nxcd",
+    "nextcode",
+    "mvc",
+    "event sourcing"
+  ],
   "bin": {
     "next": "dist/index.js",
     "nxcd": "dist/index.js"
