--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,15 @@
 os:
   - linux
+
 language: node_js
-
-node_js:
-  - "node"
-
-before_script:
-  - npm i -g typescript pnpm --unsafe-perm
-  - pnpm i
-
-script:
-  - npm run build:clean
 
 jobs:
   include:
+    - stage: "Build"
+      script:
+        - npm i -g typescript
+        - npm i
+        - npm run build:clean
     - stage: "Deploy"
       deploy:
         provider: npm
@@ -27,7 +23,7 @@ jobs:
 notifications:
   email:
     recipients:
-    - lucas.santos@nxcd.com.br
-    - rogerio.munhoz@nxcd.com.br
-    on_success: change
+    - lucas@nindoo.ai
+    - roz@nindoo.ai
+    on_success: never
     on_failure: always
